refactor: Swagger
