# src/routes/person.router.js
@@ -7,16 +7,17 @@ const Person = require('../app/schema/PersonSchema');
 
 
 module.exports = (server, routes, prefix ='/api/v1/person') => {
+
     routes.post('/', authSchemaPerson, PersonController.create);
     routes.get('/', PersonController.list);
     routes.get('/:id', PersonController.listId);    
-    routes.put('/:id', authSchemaUpdatePerson, PersonController.update);
+    routes.put('/:id', PersonController.update);
     routes.delete('/:id', PersonController.delete); 
     
     routes.post('/authenticate', async (req, res ) => {
-        const { email, password } = req.body
+        const { email, password } = req.body;
         const person = await Person.findOne({ email });
-    })
+    });
 
 
     server.use(prefix, routes);
